--- a/WareHouseApp(trailheadOrg)/WarehouseApp(TrailheadOrg)/src/classes/TestClass.cls
+++ b/WareHouseApp(trailheadOrg)/WarehouseApp(TrailheadOrg)/src/classes/TestClass.cls
@@ -2,7 +2,6 @@ public class TestClass
 {
 	public void method1()
     {
-        System.debug('Method 1');
-        System.debug('brahch Method');
+        System.debug('Method 1 Updated');
     }
 }
